# rust-project-template

./: .gitignore  AGENTS.md  Cargo.toml
crates/adapters/: Cargo.toml
crates/adapters-inbound/: Cargo.toml
crates/adapters-inbound/src/http/routes/: users.rs
crates/adapters-inbound/src/http/routes/system/: mod.rs
crates/adapters-outbound/: Cargo.toml
crates/adapters-outbound/src/: lib.rs
crates/adapters-outbound/src/publisher/: mod.rs
crates/adapters-outbound/src/repository/: sqlite.rs
crates/adapters-outbound/src/service/: mod.rs
crates/adapters/src/: lib.rs
crates/adapters/src/common/observability/: context.rs  metrics.rs  mod.rs  propagation.rs
crates/adapters/src/inbound/http/: dto.rs  mapping.rs  mod.rs  routes.rs
crates/adapters/src/inbound/http/middleware/: metrics.rs  mod.rs  request_id.rs  trace.rs
crates/adapters/src/inbound/http/routes/system/: mod.rs
crates/adapters/src/inbound/kafka/: consumer.rs  mapping.rs  mod.rs
crates/adapters/src/inbound/lambda/: mod.rs  s3_ingest.rs
crates/adapters/src/outbound/publisher/: kafka.rs  mod.rs
crates/adapters/src/outbound/repository/: sqlite.rs
crates/adapters/src/outbound/repository/pg/: mapping.rs  mod.rs  model.rs  repo.rs
crates/adapters/src/outbound/service/: foo.rs  mod.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/src/usecases/: activate_user.rs  mod.rs
crates/application/src/user_management/: add_user.rs  mod.rs  user_command.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/common/src/observability/: context.rs  metrics.rs  mod.rs  propagation.rs
crates/contracts-kafka/: Cargo.toml
crates/contracts-kafka/avro/: user_activated_v1.avsc
crates/contracts-kafka/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: errors.rs  events.rs  lib.rs
crates/domain/src/calc/: mod.rs
crates/domain/src/types/: mod.rs
crates/domain/src/user_management/: mod.rs  user.rs
crates/observability/: Cargo.toml
crates/observability/src/: context.rs  conventions.rs  init.rs  lib.rs  propagation.rs  telemetry.rs
crates/ports/: Cargo.toml
crates/ports/src/: errors.rs  lib.rs  publisher.rs  repository.rs  service.rs
crates/tests/: Cargo.toml
crates/tests/src/: http_users_it.rs  lib.rs  main.rs
crates/tests/tests/: sample.rs
