[workspace]
members = [
  "crates/domain",
  "crates/application",
  "crates/adapters-inbound",
  "crates/adapters-outbound",
  "crates/contracts-kafka",
  "crates/common",
  "crates/bootstrap",
  "crates/tests",
]
resolver = "2"

[workspace.dependencies]
# Unified version and defaults for web server/framework
actix-web = { version = "4", default-features = false }
uuid = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
mockall = "0.13.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
