[package]
name = "adapters-outbound"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
contracts-kafka = { path = "../contracts-kafka" }
rusqlite = { workspace = true }
thiserror = { workspace = true }
mockall = { workspace = true, optional = true }

[features]
mocking = ["dep:mockall"]

