[package]
name = "adapters"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
inbound-http = ["dep:actix-web"]
inbound-kafka = ["contracts-kafka"]
outbound-publisher-kafka = ["contracts-kafka"]

[dependencies]
domain = { path = "../domain" }
ports = { path = "../ports" }
observability = { path = "../observability" }
contracts-kafka = { path = "../contracts-kafka", package = "contracts-kafka", optional = true }
async-trait = "0.1"

# Optional I/O dependencies
actix-web = { version = "4", optional = true, default-features = false, features = ["macros"] }
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls"] }

