[package]
name = "adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
contracts-kafka = { path = "../contracts-kafka" }
actix-web = { workspace = true, features = ["macros"] }
rusqlite = { workspace = true }
mockall = { workspace = true, optional = true }

[features]
mocking = ["dep:mockall"]

[dev-dependencies]
