[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
adapters = { path = "../adapters" }

[dev-dependencies]
mockall = { workspace = true }
adapters = { path = "../adapters", features = ["mocking"] }
mockall_double = "0.3"
