[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }
adapters-outbound = { path = "../adapters-outbound" }

[dev-dependencies]
mockall = { workspace = true }
adapters-outbound = { path = "../adapters-outbound", features = ["mocking"] }
mockall_double = "0.3"
