[package]
name = "bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
adapters-inbound = { path = "../adapters-inbound" }
common = { path = "../common" }
contracts-kafka = { path = "../contracts-kafka" }
actix-web = { workspace = true, features = ["macros"] }
