[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
adapters = { path = "../adapters" }
domain = { path = "../domain" }
ports = { path = "../ports" }
observability = { path = "../observability" }
contracts-kafka = { path = "../contracts-kafka" }
