[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
adapters-inbound = { path = "../adapters-inbound" }
adapters-outbound = { path = "../adapters-outbound" }
domain = { path = "../domain" }
common = { path = "../common" }
contracts-kafka = { path = "../contracts-kafka" }

[dev-dependencies]
actix-web = { workspace = true, features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
